# hoploy

./: .dockerignore  .gitignore  Compose.yaml  DockerFile  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
configs/: default.yaml
hoploy/: __init__.py  cli.py  main.py  registry.py
hoploy/api/: __init__.py  app.py  factory.py
hoploy/api/routes/: admin.py  info.py  recommend.py
hoploy/api/schemas/: __init__.py  autism_schema.py  request.py  response.py
hoploy/components/: __init__.py
hoploy/components/processors/: __init__.py  base.py  default_logits_processor.py  default_sequence_processor.py  forced_logits_processor.py  forced_sequence_processor.py  restricted_logits_processor.py
hoploy/components/wrappers/: __init__.py  base.py  default_hopwise_wrapper.py
hoploy/config/: loader.py
hoploy/configs/: default.yaml
hoploy/core/: catalog.py  config.py  factory.py  pipeline.py  registry.py  utils.py
hoploy/logits_processors/: base.py  default.py
hoploy/model/: base.py
hoploy/model/wrappers/: default.py
hoploy/sequence_processors/: base.py  default.py
plugins/autism/: __init__.py  autism_schema.py  config.yaml  model.py  processors.py  wrapper.py
plugins/hummus/: __init__.py  config.yaml  hummus_schema.py  processors.py  wrapper.py
tests/integration/: test_pipeline_e2e.py
tests/unit/: test_engine.py  test_preprocessor.py  test_processors.py  test_unpacker.py
train/: hyper.py  train.py
