[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "hopwise-serve"
version = "0.1.0"
description = "Serving layer for Hopwise recommendation models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "hopwise",
    "torch>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[project.scripts]
hopwise-serve = "hopwise_serve.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["hopwise_serve*"]
